add new home page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>
-    My assignment
-  </title>
-</head>
-<body>
-hello world
-</body>
+  <head>
+    <title>
+     BTW Visa
+    </title>
+      <link href="css/style.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+    hello BTW
+
+    <div class="logo">
+      <img src="img/index.jpeg" alt="BTW Logo" style="width:304px;height:228px;">
+    </div>
+
+  </body>
 </html>
